--- a/readme
+++ b/readme
@@ -1,6 +1,1 @@
-
-idl codes for su_czt project
-
-datawork.pro for getting data
-field.pro for electric field
-main.pro for trials
+IDL codes for su_czt_gps project
